# rigel-unofficial

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  bootstrap.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  rigelConfig.h.in  rigelrc
libs/: Makefile  Makefile.am  Makefile.in  an851.c  an851.h  device.c  device.h  inhex32.c  inhex32.h  pic18.h  rigel-defs.h  serialio.c  serialio.h
man/: rigel.1
src/: .gitignore  Makefile  Makefile.am  Makefile.in  loader.c  rigel.c  rigel.h
testdata/: camera.hex  overdrive.hex  read.hex  rigelrc-malformed  tetra.hex
utils/: .gitignore  Makefile  Makefile.am  Makefile.in  an851d.c  an851d.h  endian.c  hextool.c
